--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "tailwind-merge": "^2.3.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
